test fix: reviews td element spacing with margin top and bottom for safari overlap issue

--- a/reviews/reviews.css
+++ b/reviews/reviews.css
@@ -396,6 +396,7 @@ main h2 {font-size: 2rem;}
       .dt-start, .dt-end{color: #e3f5ff;}
 
       tr {height: 6rem;}
+      td { margin-top: 1rem; margin-bottom: 1rem;}
         /*
       .th-sortlabel {position: relative; bottom: 2rem; z-index: 1;}
       .th-sortlabel .dt-column-title{position: relative; bottom: 1rem;}
